# keyvast-gui

./: .gitignore  AGENTS.md  Cargo.toml  README.md  gui-log.bat  gui.bat  run-gui.bat
.cargo/: config.china-mirror.toml  config.toml
.github/workflows/: ci.yml
benchmarks/baselines/: endurance-baseline.json  recorder-baseline.json  smoke-baseline.json
crates/kv-buffer/: Cargo.toml
crates/kv-buffer/src/: lib.rs
crates/kv-buffer/tests/: block_buffer.rs
crates/kv-cli/: Cargo.toml
crates/kv-cli/src/: args.rs  commands.rs  lib.rs  main.rs  report.rs
crates/kv-cli/tests/: simulator_recording.rs
crates/kv-core/: Cargo.toml
crates/kv-core/src/: lib.rs  pipeline.rs  process_metrics.rs
crates/kv-core/tests/: acquisition_run.rs  threaded_pipeline.rs
crates/kv-gui/: Cargo.toml
crates/kv-gui/src/: app.rs  audio_monitor.rs  channel_map.rs  channel_select.rs  config.rs  config_persist.rs  demo.rs  diskspace.rs  disp_ring.rs  dsp.rs  fft_panel.rs  impedance_panel.rs  lib.rs  live_pipeline.rs  main.rs  multiview.rs  panels.rs  panic_guard.rs  playback.rs  preview.rs  probe_map.rs  remote_api.rs  spectrum.rs  spike_overlay.rs  theme.rs  toast.rs  trigger.rs  waveform.rs
crates/kv-gui/src/app/: acquisition.rs  export.rs  recording.rs
crates/kv-gui/src/app/render/: central.rs  mod.rs  sidebar.rs  toolbar.rs
crates/kv-gui/src/panels/: format.rs  settings.rs
crates/kv-integrity/: Cargo.toml
crates/kv-integrity/src/: lib.rs
crates/kv-integrity/tests/: integrity_report.rs
crates/kv-recorder/: Cargo.toml
crates/kv-recorder/src/: export_formats.rs  lib.rs
crates/kv-recorder/tests/: export_formats.rs  kvraw_reader_errors.rs  recording_writer.rs
crates/kv-rhd/: Cargo.toml
crates/kv-rhd/src/: backend.rs  commands.rs  frame_analysis.rs  frontpanel.rs  impedance.rs  lib.rs  parser.rs  protocol.rs  rhythm_acquire.rs  rhythm_board.rs
crates/kv-rhd/tests/: rhd_command_lists.rs  rhythm_parser.rs
crates/kv-simulator/: Cargo.toml
crates/kv-simulator/src/: lib.rs
crates/kv-simulator/tests/: simulator_backend.rs
crates/kv-types/: Cargo.toml
crates/kv-types/src/: lib.rs
crates/kv-types/tests/: data_model.rs
docs/: 00-karpathy-skills.md  01-documentation-roadmap.md  02-mvp-scope.md  03-architecture.md  04-data-model.md  05-state-machine.md  06-protocol-draft.md  07-recording-format.md  08-integrity.md  09-simulator-spec.md  10-benchmark-plan.md  11-local-api.md  12-confirmed-decisions.md  13-glossary.md  14-open-questions.md  15-dev-handoff.md  16-gui-optimization-plan.md  17-multiview-plan.md  18-rhd-signal-debug.md  19-review-findings.md  20-deep-audit.md  20-gui-signal-display-review.md  21-doc20-remediation-plan.md  21-gui-console-ux-optimization.md  22-oe-vs-gui-data-compare.md
docs/22-oe-vs-gui-data-compare/: hp300_stats.json  stats_report.json
