[workspace]
members = [
    "crates/kv-buffer",
    "crates/kv-cli",
    "crates/kv-core",
    "crates/kv-gui",
    "crates/kv-integrity",
    "crates/kv-rhd",
    "crates/kv-recorder",
    "crates/kv-simulator",
    "crates/kv-types",
]
resolver = "3"

# Real-time signal display benefits from cross-crate inlining of the filter
# and ring-buffer hot paths.
[profile.release]
lto = "thin"
codegen-units = 1
# In-vivo data integrity depends on catching arithmetic overflow in the shipped
# build, not just in debug tests. Without this, integer wrap in register/seek/
# timestamp math silently corrupts data in the field while debug tests panic
# ("tested fine, exploded on site"). Genuine wrap sites use explicit
# wrapping_*/checked_*; everything else now panics observably (DA15).
overflow-checks = true

[workspace.package]
edition = "2024"

# Shared third-party dependencies are pinned once here so every crate stays on
# the same version. Member crates opt in with e.g. `log.workspace = true`.
[workspace.dependencies]
log = "0.4"
