[package]
name = "kv-cli"
version = "0.1.0"
edition.workspace = true

[dependencies]
kv-buffer = { path = "../kv-buffer" }
kv-core = { path = "../kv-core" }
kv-integrity = { path = "../kv-integrity" }
kv-recorder = { path = "../kv-recorder" }
kv-rhd = { path = "../kv-rhd" }
kv-simulator = { path = "../kv-simulator" }
kv-types = { path = "../kv-types" }
env_logger = "0.11"

[[bin]]
name = "kv-acq"
path = "src/main.rs"
