[package]
name = "kv-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
kv-buffer = { path = "../kv-buffer" }
kv-integrity = { path = "../kv-integrity" }
kv-recorder = { path = "../kv-recorder" }
kv-types = { path = "../kv-types" }

[dev-dependencies]
kv-simulator = { path = "../kv-simulator" }
