[package]
name = "kv-gui"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "kv-gui"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow"] }
egui_plot = "0.31"
rfd = "0.15"
kv-buffer = { path = "../kv-buffer" }
kv-core = { path = "../kv-core" }
kv-recorder = { path = "../kv-recorder" }
kv-rhd = { path = "../kv-rhd" }
kv-simulator = { path = "../kv-simulator" }
kv-types = { path = "../kv-types" }
egui_tiles = "0.12"
log.workspace = true
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }
